    - added new method Script::GetGroup()
    - added new method Region::SetDimensionType()
    - Added support for custom progress notification while saving to gig file.
    - Bugfix: Adding a new region in between two existing regions caused the
      new one being dropped after save operation and the gig file being tainted
      (chunks at wrong location in the RIFF tree).

  * src/DLS.cpp, src/DLS.h:
    - added new method File::GetFileName()
    - fixed minor "memory leak on exception" bug found with cppcheck
    - added new method File::GetExtensionFile(int index)
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added inline helper methods overlaps() for struct range_t
    - Added support for custom progress notification while saving to DLS file.
    - Bugfix: Adding a new region in between two existing regions caused the
      new one being dropped after save operation and the gig file being tainted
      (chunks at wrong location in the RIFF tree).

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: avoid calling read() with count 0 when writing a file,
      as this may hang on some systems
    - fixed memory leak and memory handling errors when file loading
      fails
    - added new method Chunk::ReadString
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added new method File::IsNew()
    - added support for loading RIFF-like files with a bit different layout
      than "real" RIFF files (used for KORG format support)
    - added new method Chunk::GetFile()
    - added new method Chunk::GetLayout()
    - added 2nd, alternative method for List::MoveSubChunk(), the old 1st one
      allows to move a subchunk within the current List, whereas the new 2nd
      one allows to move the subchunk from the current list to another list
    - POSIX: only assume -1 result value as error on open() calls